--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
 node_js:
   - "0.10"
+before_script:
+  - npm install istanbul coveralls
+  - npm install --dev
+script: npm run travis-test
+
