--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "crypto-lite",
-  "version": "0.0.7",
-  "stability": 1,
-  "license": "MIT",
+  "version": "0.1.0",
+  "stability": 2,
   "author": "Lauri Rooden <lauri@rooden.ee>",
+  "license": "MIT",
   "description": "Standard and secure cryptographic algorithms for browser",
   "keywords": [
     "crypto",
@@ -14,6 +14,10 @@
   ],
   "main": "index.js",
   "readmeFilename": "README.md",
+  "files": [
+    "dist",
+    "index.js"
+  ],
   "scripts": {
     "build": "node node_modules/buildman/index.js --all",
     "travis-test": "istanbul cover ./tests/run.js && (coveralls < coverage/lcov.info || exit 0)",
@@ -31,48 +35,27 @@
     "dist/crypto-lite-min.js": "index.js",
     "dist/sha1.js": {
       "devel": true,
+      "banner": "/*! litejs.com/MIT-LICENSE.txt */",
       "input": "index.js",
       "toggle": "sha256|HMAC|PBKDF2"
     },
     "dist/sha1-hmac-pbkdf2.js": {
       "devel": true,
+      "banner": "/*! litejs.com/MIT-LICENSE.txt */",
       "input": "index.js",
       "toggle": "sha256"
     },
     "dist/sha256.js": {
       "devel": true,
+      "banner": "/*! litejs.com/MIT-LICENSE.txt */",
       "input": "index.js",
       "toggle": "sha1|HMAC|PBKDF2"
     },
     "dist/sha256-hmac-pbkdf2.js": {
       "devel": true,
+      "banner": "/*! litejs.com/MIT-LICENSE.txt */",
       "input": "index.js",
       "toggle": "sha1"
     }
-  },
-  "testling": {
-    "files": "tests/run.js",
-    "browsers": [
-      "ie/6..10",
-      "ff/3",
-      "ff/4",
-      "ff/5",
-      "ff/20",
-      "ff/25",
-      "chrome/4",
-      "chrome/10",
-      "chrome/20",
-      "chrome/30",
-      "chrome/31",
-      "opera/10",
-      "opera/11",
-      "opera/11.6",
-      "opera/12",
-      "opera/16",
-      "safari/4..6",
-      "android-browser/4.2",
-      "iphone/6",
-      "ipad/6"
-    ]
   }
 }
