--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "url": "https://github.com/litejs/crypto-lite/issues"
   },
   "litejs": {
-    "build": false
+    "build": false,
+    "lint": "jshint *.js"
+  },
+  "jshintConfig": {
+    "asi": true,
+    "laxcomma": true,
+    "maxdepth": 6,
+    "quotmark": "double"
   }
 }
