--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -10,18 +10,18 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - name: Install and run
+      - name: Install
         run: |
-          npm install -g @litejs/cli jshint nyc
+          npm install -g @litejs/cli jshint c8
           npm install
-          lj test
-          lj lint
-          nyc -r lcov -r text-summary --check-coverage --branches=100 --functions=100 --lines=100 --statements=100 lj test --brief
-      - name: Coveralls
+      - name: Run lint
+        run: lj lint
+      - name: Run tests
+        run: c8 -r lcov -r text-summary --check-coverage --branches=100 --functions=100 --lines=100 --statements=100 lj test --brief
+      - name: Upload coverage
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
