--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "bugs": {
     "url": "https://github.com/litejs/crypto-lite/issues"
   },
+  "scripts": {
+    "test": "c8 -r lcov -r text-summary --check-coverage --100 lj test --brief test/index.js"
+  },
+  "devDependencies": {
+    "@litejs/cli": "21.11.0",
+    "c8": "7.12.0"
+  },
   "litejs": {
     "build": false,
     "lint": "jshint *.js"
