--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,69 @@
 name: Test
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
-
+on: [ push, pull_request, workflow_dispatch ]
 jobs:
   Coverage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - run: npm install
-    - run: npm test
-    - uses: coverallsapp/github-action@master
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+    - run: npm install && npm i -g c8 jshint
+    - run: c8 -r lcovonly -r text --check-coverage --100 npm test
+    - run: npm run lint
+    - uses: coverallsapp/github-action@v2
       name: Upload to coveralls.io
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ github.token }}
+  Test:
+    strategy:
+      matrix:
+        include:
+          - { node: 8,  os: windows-latest, arch: x86 }
+          - { node: 14, os: macos-latest,   arch: x64 }
+          - { node: 18, os: ubuntu-latest,  arch: x64 }
+    runs-on: ${{ matrix.os }}
+    name: Node ${{matrix.node}} (${{matrix.os}} ${{matrix.arch}})
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node }}
+        architecture: ${{ matrix.arch }}
+    - run: npm install
+    - run: npm test
+  Analyze:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: github/codeql-action/init@v3
+      with:
+        languages: javascript
+    - uses: github/codeql-action/analyze@v3
+      with:
+        category: /language:javascript
+  Release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [Analyze, Coverage, Test]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+    - run: |
+        echo '${{ vars.RELEASE_SIGNERS }}' > ./allowed_signers
+        git config gpg.ssh.allowedSignersFile ./allowed_signers
+        git verify-tag -v ${{ github.ref_name }}
+      name: Verify release tag signature
+    - uses: actions/setup-node@v4
+      with:
+        registry-url: https://registry.npmjs.org/
+    - run: |
+        gh release create $TAG --title $TAG --notes "$(git tag -l --format='%(subject)%0a%0a%(contents:body)' $TAG)"
+        gh run list --json databaseId  -q '.[20:]|.[].databaseId' --limit 100 | xargs -I{} gh run delete "{}"
+        [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "PUBLISH=latest" >> $GITHUB_ENV || echo "PUBLISH=next" >> $GITHUB_ENV
+      env:
+        GH_TOKEN: ${{ github.token }}
+        TAG: ${{ github.ref_name }}
+    - run: npm publish --access public --tag $PUBLISH
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
