--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,39 +4,52 @@ jobs:
   Coverage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v5
+    - uses: actions/setup-node@v5
     - run: npm install --no-audit
     - run: npm audit --audit-level=low
     - run: npx c8 -r lcovonly -r text --check-coverage --100 npm test
     - run: node --import=@litejs/cli/test.js test/load.mjs
-    - run: npm run lint
+    - run: npx lj lint
     - uses: coverallsapp/github-action@v2
       name: Upload to coveralls.io
       with:
         github-token: ${{ github.token }}
+  Bun:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v5
+    - uses: oven-sh/setup-bun@v2
+    - run: bun i
+    - run: bun x lj t
   Test:
     strategy:
       matrix:
         include:
-        - { node: 8,  os: windows-latest, arch: x86 }
-        - { node: 12, os: macos-latest,   arch: x64 }
-        - { node: 16, os: ubuntu-latest,  arch: x64 }
+        - { node: 8,  os: ubuntu-24.04,   arch: x86 }
+        - { node: 10, os: windows-2022,   arch: x86 }
+        - { node: 12, os: macos-13,       arch: x64 }
+        - { node: 16, os: ubuntu-24.04,   arch: x64 }
+        - { node: 22, os: macos-14,       arch: arm64 }
     runs-on: ${{ matrix.os }}
     name: Node ${{matrix.node}} (${{matrix.os}} ${{matrix.arch}})
     steps:
     - run: git config --global core.autocrlf false
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v5
+    - uses: actions/setup-node@v5
       with:
         node-version: ${{ matrix.node }}
         architecture: ${{ matrix.arch }}
     - run: npm install --no-audit
+    - if: matrix.os == 'windows-2022'
+      run: |
+        git config --global core.autocrlf false
+        tzutil /s "FLE Standard Time"
     - run: npm test
   Analyze:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - uses: github/codeql-action/init@v3
       with:
         languages: javascript
@@ -47,8 +60,12 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [Analyze, Coverage, Test]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+      packages: write
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
       with:
         ref: ${{ github.ref }}
     - run: |
@@ -56,17 +73,19 @@ jobs:
         git config gpg.ssh.allowedSignersFile ./allowed_signers
         git verify-tag -v ${{ github.ref_name }}
       name: Verify release tag signature
-    - uses: actions/setup-node@v4
+    - uses: actions/setup-node@v5
       with:
         registry-url: https://registry.npmjs.org/
     - run: |
-        gh release create $TAG --title $TAG --notes "$(git tag -l --format='%(subject)%0a%0a%(contents:body)' $TAG)"
-        gh run list --json databaseId  -q '.[20:]|.[].databaseId' --limit 100 | xargs -I{} gh run delete "{}"
+        MSG=$(git log -1 --no-show-signature --format=%B $TAG)
+        TITLE=$(echo "$MSG" | head -n 1)
+        NOTES=$(echo "$MSG" | tail -n +2)
+        gh release create $TAG --title "$TITLE" --notes "$NOTES"
         [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "PUBLISH=latest" >> $GITHUB_ENV || echo "PUBLISH=next" >> $GITHUB_ENV
       env:
         GH_TOKEN: ${{ github.token }}
         TAG: ${{ github.ref_name }}
-    - run: npm publish --access public --tag $PUBLISH
+    - run: npm publish --provenance --access public --tag $PUBLISH
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
