--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
     - run: npm audit --audit-level=low
     - run: npx c8 -r lcovonly -r text --check-coverage --100 npm test
     - run: node --import=@litejs/cli/test.js test/load.mjs
+    - run: npx tsc -p ./test/tsconfig.json --noEmit
     - run: npx lj lint
     - uses: coverallsapp/github-action@v2
       name: Upload to coveralls.io
